# timeseries-table-format

./: .envrc.example  .gitignore  Cargo.toml  LICENSE  README.md  bench_rg_threads.sh  cliff.toml  clippy.toml  release-plz.toml
.cargo/: config.toml.example
.github/workflows/: ci.yml  docs.yml  publish-crates.yml  publish-pypi.yml  publish-testpypi.yml  python-dist.yml  python-wheel-stamp.yml  python-wheels.yml  release-plz.yml
bench/: .gitignore  README.md  compose.yml  config.env  run_all.sh  run_clickhouse.sh  run_delta_spark.sh  run_influxdb3.sh  run_influxdb3_quick.sh  run_questdb.sh
bench/queries/: q1_time_range.sql  q2_agg.sql  q3_filter_agg.sql  q4_groupby.sql  q5_date_trunc.sql  q6_date_bin.sql
bench/scripts/: bench_lib.sh  data_prep.Dockerfile  prepare_data.py  run_data_prep.sh
bench/systems/clickhouse/: run.sh  schema.sql
bench/systems/delta_spark/: run.py  run.sh
bench/systems/influxdb3/: run.sh
bench/systems/postgres/: run.sh  schema.sql
bench/systems/questdb/: run.sh
bench/systems/timescale/: run.sh  schema.sql
bench/systems/timeseries_table/: Dockerfile  run.sh
crates/timeseries-table-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/timeseries-table-cli/src/: engine.rs  error.rs  main.rs  paths.rs  query.rs  shell.rs
crates/timeseries-table-cli/tests/: cli_create_append_query.rs  cli_workflows.rs  shell_interactive.rs
crates/timeseries-table-cli/tests/common/: mod.rs
crates/timeseries-table-core/: CHANGELOG.md  Cargo.toml  README.md
crates/timeseries-table-core/examples/: ingest_nvda.rs
crates/timeseries-table-core/src/: common.rs  coverage.rs  formats.rs  fs.rs  helpers.rs  layout.rs  lib.rs  log.rs  metadata.rs  storage.rs  table.rs  time_series_table.rs  transaction_log.rs
crates/timeseries-table-core/src/common/: time_column.rs
crates/timeseries-table-core/src/coverage/: bucket.rs  io.rs  layout.rs  serde.rs
crates/timeseries-table-core/src/formats/: parquet.rs
crates/timeseries-table-core/src/formats/parquet/: coverage.rs  schema.rs  segment_meta.rs
crates/timeseries-table-core/src/helpers/: coverage_sidecar.rs  parquet.rs  schema.rs  segment_coverage.rs  segment_entity_identity.rs  segment_order.rs  time_bucket.rs
crates/timeseries-table-core/src/helpers/parquet/: rg_parallel.rs  schema.rs  segment_meta.rs
crates/timeseries-table-core/src/layout/: coverage.rs
crates/timeseries-table-core/src/log/: actions.rs  log_store.rs  segments.rs  table_metadata.rs  table_state.rs
crates/timeseries-table-core/src/metadata/: log.rs  model.rs  schema_compat.rs  segments.rs  table_metadata.rs  time_column.rs
crates/timeseries-table-core/src/storage/: error.rs  layout.rs  operations.rs  output.rs  table_location.rs
crates/timeseries-table-core/src/table/: append.rs  coverage.rs  error.rs  scan.rs  test_util.rs
crates/timeseries-table-core/src/time_series_table/: append.rs  append_report.rs  coverage_queries.rs  coverage_state.rs  error.rs  scan.rs  test_util.rs
crates/timeseries-table-core/src/transaction_log/: actions.rs  checkpoint.rs  log_store.rs  logical_schema.rs  segments.rs  table_metadata.rs  table_state.rs
crates/timeseries-table-core/tests/: coverage_pipeline_tests.rs  latest_snapshot.rs  log_integration_tests.rs
crates/timeseries-table-datafusion/: CHANGELOG.md  Cargo.toml  README.md
crates/timeseries-table-datafusion/examples/: query_nvda_ma.rs
crates/timeseries-table-datafusion/src/: lib.rs  pretty.rs  test_utils.rs  ts_table_provider.rs
crates/timeseries-table-datafusion/src/ts_table_provider/: pruning.rs  tests.rs  time_predicate.rs
crates/timeseries-table-datafusion/tests/: smoke.rs  ts_table_provider_tests.rs
crates/timeseries-table-format/: CHANGELOG.md  Cargo.toml  README.md
crates/timeseries-table-format/src/: lib.rs  prelude.rs
crates/timeseries-table-python/: CHANGELOG.md  Cargo.toml  python-src.stamp
crates/timeseries-table-python/src/: error_map.rs  exceptions.rs  lib.rs  sql_stream_reader.rs  tokio_runner.rs
docs/: perf.md  releasing-crates-io.md
docs-site/: mkdocs.yml  requirements.txt
docs-site/docs/: faq.md  index.md  install.md  performance.md  troubleshooting.md
docs-site/docs/concepts/: bucketing_and_overlap.md  table_root.md  when_to_use_this.md
docs-site/docs/reference/: exceptions.md  session.md  timeseries_table.md
docs-site/docs/tutorials/: create_append_query.md  parameterized_queries.md  real_world_workflow.md  register_and_join.md
docs/benchmarks/: README.md
docs/blog/how-i-built-this/: how-i-built-this.md
examples/data/: nvda_1h_sample.csv
examples/nvda_table/_coverage/segments/: segcov-ca3cea172cc538ce04756e34beaea4a4.roar
examples/nvda_table/_timeseries_log/: 0000000001.json  0000000002.json
python/: Cargo.toml  README.md  pyproject.toml  timeseries_table_format.pyi
python/_cargo_src/: lib.rs
python/bench/: sql_conversion.py
python/examples/: README.md  create_append_sql.py  parameterized_queries.py  quickstart_create_append_query.py  register_and_join_two_tables.py
python/src/timeseries_table_format/: __init__.py  __init__.pyi  _dev.py  _dev.pyi  _native.py  _native.pyi  notebook_display.py  notebook_display_config.py
python/tests/: test_bench_sql_c_stream.py  test_docs_examples.py  test_exceptions.py  test_notebook_display.py  test_roundtrip_single_table.py  test_session.py  test_session_register_parquet.py  test_session_register_tstable.py  test_session_runtime.py  test_session_sql.py  test_session_sql_export_modes.py  test_session_sql_join.py  test_session_sql_join_two_tstables.py  test_session_sql_reader.py  test_session_tables_deregister.py  test_smoke.py  test_table_append_parquet.py  test_table_create_open.py  test_table_introspection.py
scripts/: check_release_tags.py  update_python_wheel_stamp.py
scripts/bench/: README.md  bench_rg_grid.sh  bench_rg_threads.sh  generate_benchmark_chart.py  generate_benchmark_chart_v2.py
