[workspace]
members = ["crates/timeseries-table-core", "crates/timeseries-table-datafusion"]
resolver = "3"

[workspace.lints.rust]
missing_docs = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[workspace.dependencies]
arrow = "57.1.0"
arrow-array = "57.1.0"
arrow-select = "57.1.0"
parquet = "57.1.0"