[project]
name = "timeseries-table-format"
dynamic = ["version"]
description = "Append-only time-series table format with gap/overlap tracking (Python bindings)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyarrow>=23.0.0",
]

[build-system]
requires = ["maturin>=1.11.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "../crates/timeseries-table-python/Cargo.toml"
bindings = "pyo3"
python-source = "src"
module-name = "timeseries_table_format._native"

[dependency-groups]
dev = [
    "ruff",
    "ty",
    "pytest>=9.0.2",
    "maturin>=1.11.0,<2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra"]
