[project]
name = "timeseries-table-format"
dynamic = ["version"]
description = "Append-only time-series table format with gap/overlap tracking (Python bindings)."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pyarrow>=23.0.0",
]

[project.urls]
Documentation = "https://mag1cfrog.github.io/timeseries-table-format/"
Repository = "https://github.com/mag1cfrog/timeseries-table-format"
Issues = "https://github.com/mag1cfrog/timeseries-table-format/issues"
Changelog = "https://github.com/mag1cfrog/timeseries-table-format/blob/main/crates/timeseries-table-python/CHANGELOG.md"

[build-system]
requires = ["maturin>=1.11.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "../crates/timeseries-table-python/Cargo.toml"
bindings = "pyo3"
python-source = "src"
module-name = "timeseries_table_format._native"

[dependency-groups]
dev = [
    "ruff",
    "ty",
    "pytest>=9.0.2",
    "maturin>=1.11.0,<2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra"]
