[package]
name = "timeseries-table-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = { workspace = true, features = ["prettyprint"] }
arrow-csv = { workspace = true }
arrow-json = { workspace = true }
clap = { version = "4.5.54", features = ["derive"] }
datafusion = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt-multi-thread", "macros"] }

timeseries-table-core = { path = "../timeseries-table-core" }
timeseries-table-datafusion = { path = "../timeseries-table-datafusion" }
futures-util = { workspace = true }
async-trait = { workspace = true }
tabled = { workspace = true }
rustyline = { version = "17.0.2", features = ["with-file-history"] }

[dev-dependencies]
arrow = { workspace = true }
parquet = { workspace = true }
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[lints]
workspace = true
