[package]
name = "timeseries-table-cli"
version = "0.1.0"
edition = "2024"
default-run = "tstable"

[[bin]]
name = "tstable"
path = "src/main.rs"

[dependencies]
arrow = { workspace = true, features = ["prettyprint"] }
arrow-array = { workspace = true }
arrow-csv = { workspace = true }
arrow-json = { workspace = true }
bytes = "1.11.0"
clap = { version = "4.5.54", features = ["derive"] }
datafusion = { workspace = true }
parquet = { workspace = true }
rayon = "1.11.0"
snafu = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt-multi-thread", "macros", "process"] }

timeseries-table-core = { path = "../timeseries-table-core", version = "0.2.1" }
timeseries-table-datafusion = { path = "../timeseries-table-datafusion", version = "0.1.1" }
futures-util = { workspace = true }
async-trait = { workspace = true }
tabled = { workspace = true }
rustyline = { version = "17.0.2", features = ["with-file-history"] }
terminal_size = "0.3.0"
chrono = { workspace = true }

[dev-dependencies]
arrow = { workspace = true }
parquet = { workspace = true }
tempfile = "3"
assert_cmd = "2"
predicates = "3"
timeseries-table-core = { path = "../timeseries-table-core", version = "0.2.1", features = ["test-counters"] }

[lints]
workspace = true
