[package]
name = "timeseries-table-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/mag1cfrog/timeseries-table-format"
description = "Core engine for a Rust-native log-structured time-series table format (metadata log + coverage bitmaps)."

[dependencies]
arrow = "57.1.0"
arrow-array = "57.1.0"
arrow-select = "57.1.0"
bytes = "1.11.0"
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
parquet = "57.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
snafu = { version = "0.8.9", features = ["backtrace"] }
tokio = { version = "1.48.0", features = ["fs", "io-util"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.48.0", features = ["macros", "rt"] }

[lints]
workspace = true
