[package]
name = "timeseries-table-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/mag1cfrog/timeseries-table-format"
description = "Core engine for a Rust-native log-structured time-series table format (metadata log + coverage bitmaps)."

[dependencies]
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-select = { workspace = true }
blake3 = "1.8.2"
bytes = "1.11.0"
chrono = { workspace = true }
futures = "0.3.31"
parquet = { workspace = true }
roaring = "0.11.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
snafu = { version = "0.8.9", features = ["backtrace"] }
tokio = { version = "1.48.0", features = ["fs", "io-util"] }
log = "0.4"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
