[package]
name = "timeseries-table-datafusion"
version = "0.1.0"
edition = "2024"

[dependencies]
timeseries-table-core = { path = "../timeseries-table-core", version = "0.1.0" }

arrow = { workspace = true }
datafusion = { workspace = true }
async-trait = "0.1.89"

tokio = { workspace = true }

[dev-dependencies]
chrono = "0.4.42"
parquet = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
