[package]
name = "timeseries-table-datafusion"
version = "0.1.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/mag1cfrog/timeseries-table-format"
description = "DataFusion SQL integration for timeseries-table-core tables (TableProvider + segment pruning)."
readme = "README.md"

[dependencies]
timeseries-table-core = { path = "../timeseries-table-core", version = "0.2.2" }

arrow = { workspace = true }
datafusion = { workspace = true }
object_store = "0.12.5"
async-trait = { workspace = true }

tokio = { workspace = true }

chrono = { workspace = true }
chrono-tz = { workspace = true }

[dev-dependencies]
chrono = "0.4.42"
parquet = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt"] }
timeseries-table-core = { path = "../timeseries-table-core", version = "0.2.2", features = ["test-counters"] }

[lints]
workspace = true
