[package]
name = "timeseries-table-format"
version = "0.1.4"
edition = "2024"
description = "Append-only time-series table format with gap/overlap tracking"
license = "MIT"
repository = "https://github.com/mag1cfrog/timeseries-table-format"
readme = "README.md"
keywords = ["time-series", "parquet", "datafusion", "analytics"]
categories = ["database", "data-structures"]

[features]
default = ["datafusion"]
datafusion = ["dep:timeseries-table-datafusion"]

[dependencies]
timeseries-table-core = { path = "../timeseries-table-core", version = "0.2.2" }
timeseries-table-datafusion = { path = "../timeseries-table-datafusion", version = "0.1.2", optional = true }

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
