[package]
name = "timeseries-table-python"
version = "0.1.3"
edition = "2024"
publish = false

[dependencies]
arrow-ipc = { workspace = true }
datafusion = { workspace = true }

pyo3 = { version = "0.28" }

tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }

timeseries-table-core = { path = "../timeseries-table-core", version = "0.2.2" }
timeseries-table-datafusion = { path = "../timeseries-table-datafusion", version = "0.1.2" }


[lints]
workspace = true

[lib]
crate-type = ["cdylib"]
name = "_native"

[features]
default = []
test-utils = []
ipc-zstd = ["arrow-ipc/zstd"]
